2 March 2020: George
	- Fix compiler warning in dns64/dns64.c

28 February 2020: Ralph
	- Merge PR #172: Add IBM s390x arch for testing, by noloader.

28 February 2020: Wouter
	- Merge PR #173: updated makedist.sh for config.guess and
	  config.sub and sha256 digest for gpg, by noloader.
	- Merge PR #164: Framestreams, this branch implements dnstap
	  unidirectional connectivity in unbound. This has a number of
	  new features.

	  The dependency on libfstrm is removed. The fstrm protocol code
	  resides in dnstap/dnstap_fstrm.h and dnstap/dnstap_fstrm.c. This
	  contains a brief definition of what unbound needs.

	  The make unbound-dnstap-socket builds a debug tool,
	  unbound-dnstap-socket. It can listen, accept multiple DNSTAP
	  streams and print information. Commandline options control it.

	  Unbound can reconnect if the unix domain socket file socket is
	  closed. This uses exponential backoff after which it uses a
	  one second timer to throttle cpu down. There is also support
	  to use TCP and TLS for connecting to the log server. There
	  are new config options to turn them on, in the dnstap section
	  in the man page and example config file. dnstap-ip with IP
	  address of server for TCP or TLS use. dnstap-tls to turn
	  on TLS. And dnstap-tls-server-name, dnstap-tls-cert-bundle,
	  dnstap-tls-client-key-file and dnstap-tls-client-cert-file
	  to configure the certificates for server authentication and
	  client authentication, or leave at "" to not use that.

27 February 2020: George
	- Merge PR #171: Add additional compilers and platforms to Travis
	  testing, by noloader.

27 February 2020: Wouter
	- Fix #169: Fix warning for daemon/remote.c output may be truncated
	  from snprintf.
	- Fix #170: Fix gcc undefined sanitizer signed integer overflow
	  warning in signature expiry RFC1982 serial number arithmetic.
	- Fix more undefined sanitizer issues, in respip copy_rrset null
	  dname, and in the client_info_compare routine for null memcmp.
