@@ -1,3 +1,7 @@
+2 March 2020: Ralph
+	- Fix link error when OpenSSL is configured with no-engine,
+	  thanks noloader.
+
 2 March 2020: George
 	- Fix compiler warning in dns64/dns64.c
 
